src/objects/Catalog_Order__c.object
<CustomObject>
    <fields>
        <fullName>Catalog_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Catalog</label>
        <referenceTo>Catalog__c</referenceTo>
        <relationshipLabel>Catalogs Orders</relationshipLabel>
        <relationshipName>Catalogs_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Count</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderId__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>OrderId</label>
        <referenceTo>Order__c</referenceTo>
        <relationshipLabel>Catalogs Orders</relationshipLabel>
        <relationshipName>Catalogs_Orders</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Id__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Order_Id</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Catalogs Orders</relationshipLabel>
        <relationshipName>Catalogs_Orders</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Catalog Order</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Catalog Order Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Catalogs Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>